# prev_gen

./: CHANGELOG.md  Gemfile  MIGRATION6.md  README  README.md  WIKI.md  _config.yml  classes.py  example.json  example.py  example.toml  example.yaml  example.yml  main.py  palette.py  prev_gen.py  pyproject.toml  run.py  test.py  test_helper.py
_posts/: 2024-10-12-welcome-to-jekyll.md
prev_gen/: __init__.py  color.py  config.py  distance.py  example.txt  filters.py  formats.py  gui.py  lazyloadError.py  literals.py  main.py  palette.py  preview.py  previewSvg.py  previewer.py  reverse.py  reverseSvg.py  reverser.py  script.py  scripts.py  settings.py  table.py  tile.py  types.py  util.py
