[build-system]
build-backend = 'setuptools.build_meta'
requires = [
  'build',
  'pytest >= 6.0',
  'pytest-cov',
  'setuptools >= 61.0',
  'wheel'
]

[project]
name = 'prev_gen'
version = '6.0.1'
requires-python = '>= 3.10'
dependencies = [
  'colour-science>=0.4.5',
  'drawsvg<3',
  'matplotlib',
  'multimethod',
  'networkx',
  'pillow',
  'pyyaml',
  'tomlkit',
  'tqdm'
]
authors = [
  { name = 'Remigiusz Dończyk', email = 'donczyk.remigiusz@gmail.com' }
]
description = 'Palette preview generator'
readme = 'README.md'
license = { file = 'LICENSE' }
keywords = [
  'palette',
  'preview',
  'generator',
  'image',
  'color',
  'graphics'
]
classifiers = [
  'Development Status :: 6 - Mature',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Natural Language :: English',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3.10',
  'Topic :: Artistic Software',
  'Topic :: Multimedia :: Graphics :: Graphics Conversion',
  'Topic :: Multimedia :: Graphics :: Presentation',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Typing :: Typed'
]

[project.urls]
Documentation = 'https://github.com/Aonodensetsu/prev_gen/blob/main/WIKI.md'
Repository = 'https://github.com/Aonodensetsu/prev_gen'
Changelog = 'https://github.com/Aonodensetsu/prev_gen/blob/main/CHANGELOG.md'

[project.scripts]
prev_gen = 'prev_gen.scripts:prev_gen'

[tool.setuptools.package-data]
prev_gen = [
  'example.txt',
  'nunito.ttf'
]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--cov=prev_gen'
python_files = [
  'test.py'
]
